# pfs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  NEWS  README.md  build.rs  meson.build  meson.options
.gitlab-ci/: debian.Dockerfile  run-docker.sh
data/: meson.build  mobi.phosh.FileOpen.desktop.in.in  mobi.phosh.FileOpen.service.in
data/icons/: meson.build
data/systemd/: meson.build  mobi.phosh.FileOpen.service.in
debian/: changelog  control  copyright  pfs-common.install  pfs-demo.install  pfs-utils.install
po/: LINGUAS  POTFILES.in  de.po  ja.po  pl.po  ru.po
src/: bookmarks-box.ui  bookmarks-item.ui  bookmarks_box.rs  bookmarks_item.rs  config.rs  dir-view.ui  dir_stack.rs  dir_view.rs  file-props.ui  file-selector.ui  file_props.rs  file_selector.rs  grid-item.ui  grid_item.rs  init.rs  lib.rs  path_bar.rs  pfs.gresource.xml  places-box.ui  places_box.rs  places_item.rs  util.rs
src/examples/: example.c
src/examples/demo/: demo_application.rs  demo_window.rs  pfs_demo.rs
src/examples/open/: config.rs  pfs_open.rs  pfs_open_application.rs
src/include/: pfs.h
tests/: api.rs
