[package]
name = "PhoshFileSelector"
version = "0.0.7"
edition = "2021"
description = "A file selector widget for Phosh using gtk-rs"
readme = "README.md"
homepage = "https://phosh.mobi"
repository = "https://gitlab.gnome.org/World/Phosh/pfs"
license = "GPL-3.0-or-later"
keywords = ["gtk", "adwaita", "phosh"]
exclude = ["/debian"]

[lib]
name = "pfs"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "pfs-demo"
path = "src/examples/demo/pfs_demo.rs"

[[bin]]
name = "pfs-open"
path = "src/examples/open/pfs_open.rs"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib-macros = "0.21"
gtk = { version = "0.10", package = "gtk4", features = ["gnome_47"] }

[dependencies.adw]
package = "libadwaita"
version = "0.8.1"
features = ["v1_6"]
